[package]
name = "chipper"
authors = ["raddari"]
version = "0.0.1"
edition = "2018"
description = "Chip8 interpreter and debugger!"
repository = "https://github.com/raddari/chipper"
license = "MIT"

[dependencies]
enum-ordinalize = "3.1.*"
rand = "0.8.*"

[dev-dependencies]
pretty_assertions = "0.7.*"
